<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pykdl_ros</name>
  <version>0.0.1</version>
  <description>Stamped PyKDL classes</description>

  <author email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</author>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/tue-robotics/pykdl_ros/issues</url>
  <url type="repository">https://github.com/tue-robotics/pykdl_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>genpy</exec_depend>
  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>
  <doc_depend>python3-yaml</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
