<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pykdl_ros</name>
  <version>0.0.0</version>
  <description>Stamped PyKDL classes</description>

  <author email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</author>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/tue-robotics/pykdl_ros/issues</url>
  <url type="repository">https://github.com/tue-robotics/pykdl_ros</url>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>python_orocos_kdl_vendor</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
