<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf2_pykdl_ros</name>
  <version>0.0.1</version>
  <description>tf2 conversions for pykdl_ros</description>

  <author email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</author>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pykdl_ros</exec_depend>
  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>tf2_geometry_msgs</test_depend>

  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
